@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@
 package org.springframework.expression.spel.ast;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -27,16 +28,16 @@ import static org.assertj.core.api.Assertions.assertThat;
 /**
  * @author Andy Wilkinson
  */
-public class FormatHelperTests {
+class FormatHelperTests {
 
 	@Test
-	public void formatMethodWithSingleArgumentForMessage() {
-		String message = FormatHelper.formatMethodForMessage("foo", Arrays.asList(TypeDescriptor.forObject("a string")));
+	void formatMethodWithSingleArgumentForMessage() {
+		String message = FormatHelper.formatMethodForMessage("foo", List.of(TypeDescriptor.forObject("a string")));
 		assertThat(message).isEqualTo("foo(java.lang.String)");
 	}
 
 	@Test
-	public void formatMethodWithMultipleArgumentsForMessage() {
+	void formatMethodWithMultipleArgumentsForMessage() {
 		String message = FormatHelper.formatMethodForMessage("foo", Arrays.asList(TypeDescriptor.forObject("a string"), TypeDescriptor.forObject(5)));
 		assertThat(message).isEqualTo("foo(java.lang.String,java.lang.Integer)");
 	}
